Fixed sectionHeroTitle spacing on mobile

--- a/components/Section/style.module.scss
+++ b/components/Section/style.module.scss
@@ -135,6 +135,10 @@
   margin: 0 auto;
   z-index: 2;
   padding: 2rem 0;
+
+  @media (max-width: $breakPointXL) {
+    padding: 0 1rem;
+  }
 }
 
 .elementContainer {
